# rsome

./: .coverage  LICENSE.md  README.md  __init__.py  clp_solver.py  cpx_solver.py  cvx_solver.py  dao.py  dro.py  grb_solver.py  lp.py  lp_test.lp  lpg_solver.py  msk_solver.py  ort_solver.py  pyproject.toml  requirements.txt  ro.py  rsome.py  setup.cfg  setup.py  socp.py  subroutines.py
docs/: Gemfile  _config.yml  about.md  dro_rsome.md  example_dro_finpl.md  example_dro_inv.md  example_dro_ls.md  example_dro_mas.md  example_dro_nv.md  example_dro_portfolio.md  example_dro_rs_portfolio.md  example_dro_vehicle.md  example_ls.md  example_max_volume_box.md  example_min_ellipsoid.md  example_moment_uncertainty_portfolio.md  example_mv_portfolio.md  example_opf.md  example_ro_cvar_portfolio.md  example_ro_inv.md  example_ro_knapsack.md  example_ro_portfolio.md  example_ro_vehicle.md  example_sudoku.md  examples.md  get_start.md  ieee_rts.xlsx  index.markdown  index.md  quickstart_tutorial.md  ro_rsome.md  setup.md  taxi_rain.csv
extra_tests/: lp_test.lp  test_sdp_dro.py  test_sdp_ro.py  test_solvers.py
rsome/: __init__.py  clp_solver.py  cpt_solver.py  cpt_solver_bkp.py  cpx_solver.py  cvx_solver.py  deco.py  dro.py  eco_solver.py  gcp.py  grb_solver.py  lp.py  lpg_solver.py  math.py  msk_solver.py  ort_solver.py  ro.py  socp.py  subroutines.py  this.py
tests/: test_ambiguity.py  test_case_dro_newsvendors.py  test_case_mv_portfolio.py  test_case_ro_inventory_control.py  test_case_ro_portfolio.py  test_case_sudoku.py  test_dro_affine.py  test_dro_convex.py  test_dro_dvar.py  test_dro_model.py  test_expcone_dro.py  test_expcone_ro.py  test_lp_model.py  test_ro_affine.py  test_ro_convex.py  test_ro_dvar.py  test_ro_ldr.py  test_ro_model.py  test_ro_rvar.py  test_sdp_ro.py  (+4 more)
(+79 files in other folders)
