[metadata]
name = rsome
version = 1.2.0
description = Robust Stochastic Optimization Made Easy
long_description = file: README.rst
author = Peng Xiong
license = GPL-3.0
license_file = LICENSE.md
platforms = linux, osx, win64
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    rsome
install_requires =
    numpy >= 1.20.0
    scipy >= 1.9.0
    pandas >= 0.25.0
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
rsome = py.typed

[flake8]
max-line-length = 90

exclude=
    *__init__.py
    *lpg_solver.py
